--- a/rb.html
+++ b/rb.html
@@ -6,6 +6,45 @@
     <title>BOARDRIDERS</title>
 </head>
 <body>
-    
+    <header>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <div>BOARDRIDERS</div>
+        <img src="" alt="">
+        <img src="" alt="">
+    </header>
+
+    <section class="sec1">
+        <p>Мужчинам Женщинам Детям</p>
+        <img src="" alt="">
+        <p>Популярные категории</p>
+        <ul>
+            <li>Распродажа</li>
+            <li>Новинки</li>
+            <li>Сноуборд</li>
+            <li>Лыжи</li>
+            <li>Скейт</li>
+            <li>ПОКАЗАТЬ ЕЩЕ <img src="" alt=""></li>
+        </ul>
+        <img src="" alt="">
+    </section>
+
+    <section class="sec2">
+        <img src="" alt="">
+        <img src="" alt="">
+        <p>Новинки</p>
+        <ol>
+            <li><img src="" alt=""><p>LIB TECH Мужской Сноуборд 34392 Р</p></li>
+            <li><img src="" alt=""><p>LIB TECH Мужской Сноуборд 17392 Р</p></li>
+        </ol>
+
+
+    <footer>
+        <hr>
+        <p>fnaslkdjfklsf</p>
+        <p>s,dmfnsandfm</p>
+        <p>sandslanlksdnfkl</p>
+    </footer>
 </body>
 </html>
