--- a/rb.html
+++ b/rb.html
@@ -38,7 +38,42 @@
             <li><img src="" alt=""><p>LIB TECH Мужской Сноуборд 34392 Р</p></li>
             <li><img src="" alt=""><p>LIB TECH Мужской Сноуборд 17392 Р</p></li>
         </ol>
+    </section>
 
+    <section class="sec3">
+        <img src="" alt="">
+        <p>Название акции</p>
+        <p>пылполыоплывпдлоывфплдодывподвоыфлдпо</p>
+        <p>ьыватфдлыатлфвдыта</p>
+        <li><img src="" alt=""><p>LIB TECH Мужской Сноуборд 34392 Р</p></li>
+        <li><img src="" alt=""><p>LIB TECH Мужской Сноуборд 17392 Р</p></li>
+    </section>
+
+    <section class="sec4">
+        <p>Новые статьи</p>
+        <img src="" alt="">
+        <p>иаыиаыфиаывола</p>
+        <p>отвыофтлытв</p>
+        <hr>
+        <p>Смотреть все статьи</p>
+    </section>
+
+    <section class="sec5">
+        <img src="" alt="">
+        <img src="" alt="">
+        <p>ПОдписывайтесь на нас</p>
+        <p>skansklf</p>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </section>
+
+    <section class="sec6">
+        <img src="" alt="">
+        <p>лаывтфлтфыдв<br>лвпытлдп</p>
+        <img src="" alt="">
+        <p>дывтдлфтлдтыа<br>длвыдлфптыдл</p>
+    </section>
 
     <footer>
         <hr>
