Вторая проверка + добавил ФИО в title

--- a/rb.html
+++ b/rb.html
@@ -10,13 +10,13 @@
         <img src="" alt="">
         <img src="" alt="">
         <img src="" alt="">
-        <div>BOARDRIDERS</div>
+        <div>Жетписов Ансат Нурланович 221-324</div>
         <img src="" alt="">
         <img src="" alt="">
     </header>
 
     <section class="sec1">
-        <p>Мужчинам Женщинам Детям</p>
+        <h2>Мужчинам Женщинам Детям</h2>
         <img src="" alt="">
         <p>Популярные категории</p>
         <ul>
@@ -42,8 +42,8 @@
 
     <section class="sec3">
         <img src="" alt="">
-        <p>Название акции</p>
-        <p>пылполыоплывпдлоывфплдодывподвоыфлдпо</p>
+        <h3>Название акции</h3>
+        <h2>пылполыоплывпдлоывфплдодывподвоыфлдпо</h2>
         <p>ьыватфдлыатлфвдыта</p>
         <li><img src="" alt=""><p>LIB TECH Мужской Сноуборд 34392 Р</p></li>
         <li><img src="" alt=""><p>LIB TECH Мужской Сноуборд 17392 Р</p></li>
